objects/spExams__User_Exam_Answer__c.object
<CustomObject>
    <fields>
        <fullName>spExams__Answer__c</fullName>
        <label>Answer</label>
        <referenceTo>spExams__Answer__c</referenceTo>
        <relationshipLabel>User Exam Answers</relationshipLabel>
        <relationshipName>User_Exam_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>spExams__Free_Text_Content__c</fullName>
        <label>Free Text Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>spExams__Is_Correct__c</fullName>
        <label>Is Correct</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__User_Exam_Question__c</fullName>
        <label>User Exam Question</label>
        <referenceTo>spExams__User_Exam_Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>User_Exam_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Exam Answer</label>
    <nameField>
        <displayFormat>UEA-{0000000}</displayFormat>
        <label>User Exam Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Exam Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>